# pscanner

./: README.md  pyproject.toml
.github/workflows/: auto_pr.yaml
pscanner/: __about__.py  __init__.py  __main__.py
pscanner/cli/: __init__.py
tests/: test_pscanner.py
